provider: change scripts repo

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           repository: prosopo/scripts
           path: scripts
-          ref: ${{ matrix.branch }}
+          ref: upgrade_deps
 
       - run: mkdir -p ~/image-cache
 
