--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -77,26 +77,32 @@ jobs:
         continue-on-error: true
         run: npm list
 
+      - name: Checkout correct branches
+        run: |
+          cd workspaces
+          git checkout ${{ matrix.branch }}
+          git submodule update --init --recursive
+          git submodule foreach git checkout ${{ matrix.branch }} || git checkout develop
+          git submodule foreach git pull origin ${{ matrix.branch }} || git pull origin
+
       - name: Install dependencies
         run: |
           cd workspaces
-          npm run checkout ${{ matrix.branch }}
           npm install
 
 
       - name: Build provider and dependencies
         run: |
-          cd workspaces
-          npm run checkout ${{ matrix.branch }}
           cat package.json
           npm run build+deps provider
 
       - name: Setup the environment and run the unit tests
         run: |
           cd workspaces
-          npm run checkout ${{ matrix.branch }}
+          git status | head -n 1
           NODE_ENV=$ENVIRONMENT npm run setup
           cd packages/provider
+          git status | head -n 1
           cat .env.development
           NODE_ENV=$ENVIRONMENT npm run test
 
