--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -81,6 +81,7 @@ jobs:
         run: |
           cd workspaces
           git checkout ${{ matrix.branch }}
+          npm run checkout ${{ matrix.branch }}
           git submodule update --init --recursive
           git submodule foreach git checkout ${{ matrix.branch }} || git checkout develop
           git submodule foreach git pull origin ${{ matrix.branch }} || git pull origin develop
