provider: ls contents of image cache folder

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -53,6 +53,7 @@ jobs:
 
       - if: steps.image-cache.outputs.cache-hit == 'true'
         run: |
+          ls ~/image-cache
           docker load -i ~/image-cache/prosopo.tar
           docker load -i ~/image-cache/mongo.tar
 
