--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -74,7 +74,7 @@ jobs:
       - id: node-cache
         uses: actions/cache@v3
         with:
-          path: workspaces/node_modules
+          path: ~/workspaces/node_modules
           key: node-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             node-cache-${{ runner.os }}-
