provider: try to work out which folder we're in

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -84,9 +84,11 @@ jobs:
         continue-on-error: true
         run: |
           pwd
+          cd ~
+          pwd
           ls
           cd workspaces
-          ls node_modules
+          ls
           echo "node cache hit"
           npm list
 
