--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -20,6 +20,8 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: Remove stopped containers
+        run: docker rm $(docker ps -a -q)
 
       - name: Clone workspaces
         uses: actions/checkout@v3
