--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -17,6 +17,11 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: Check github refname
+        run: |
+          echo ${{ github.ref }}
+          echo ${{ github.ref_name }}
+          echo ${{ github.base_ref }}
 
       - name: Remove stopped containers
         run: docker rm $(docker ps -a -q) || true
@@ -27,7 +32,7 @@ jobs:
           repository: prosopo/workspaces
           path: workspaces
           submodules: recursive
-          ref: ${{ github.ref }}
+          ref: ${{ github.ref_name }}
 
       - name: Clone scripts repository
         uses: actions/checkout@v3
