provider: add some debug

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -73,10 +73,9 @@ jobs:
           cd workspaces
           git checkout ${{ github.head_ref }}
           git submodule update --init --recursive
-          git submodule foreach git remote update
-          git submodule foreach git fetch remotes/origin
-          git submodule foreach 'git checkout remotes/origin/${{ github.head_ref }} || git checkout remotes/origin/${{ github.base_ref }}'
-          git submodule foreach 'git pull origin ${{ github.head_ref }} || git pull origin ${{ github.base_ref }}'
+          git submodule foreach 'echo "fetching remote..." && git fetch remotes/origin'
+          git submodule foreach 'echo "checking out..." && git checkout remotes/origin/${{ github.head_ref }} || git checkout remotes/origin/${{ github.base_ref }}'
+          git submodule foreach 'echo "pulling..." && git pull remotes/origin ${{ github.head_ref }} || git pull remotes/origin ${{ github.base_ref }}'
 
       - id: node-cache
         uses: actions/cache@v3
