provider: try adding ssh key

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
           repository: prosopo/workspaces
           path: workspaces
           submodules: recursive
-          ssh-key: ${{ github.token }}
+          key: ${{ secrets.SSH_KEY }}
 
       - name: Checkout correct workspaces branch
         run: |
@@ -48,7 +48,7 @@ jobs:
         with:
           repository: prosopo/scripts
           path: scripts
-          ssh-key: ${{ github.token }}
+          ssh-key: ${{ secrets.SSH_KEY }}
 
       - name: Checkout correct scripts branch
         run: |
