--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
         run: docker rm $(docker ps -a -q) || true
 
       - name: Make sure ssh key is set
-        run : echo ${{ secrets.SSH_KEY }}
+        run : cat ${{ secrets.SSH_KEY }}
 
       - name: Clone workspaces
         uses: actions/checkout@v3
