--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -29,10 +29,8 @@ jobs:
         run: docker rm $(docker ps -a -q) || true
 
       - name: Clone workspaces
-      - uses: actions/checkout@v3
-      - uses: webfactory/ssh-agent@v0.7.0
+        uses: actions/checkout@v3
         with:
-
           repository: prosopo/workspaces
           path: workspaces
           submodules: recursive
