--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -89,7 +89,9 @@ jobs:
         run: |
           cd workspaces
           git submodule foreach 'echo $(git remote -v)'
-          git submodule foreach 'echo "pulling..." && git pull origin ${{ github.head_ref }} || git fetch && git reset --hard origin/${{ github.base_ref }} && git pull --rebase origin ${{ github.base_ref }} --force'
+          git submodule foreach 'git fetch'
+          git submodule foreach 'echo "checking out..." && git checkout ${{ github.head_ref }} || git checkout ${{ github.base_ref }} || git checkout develop'
+          git submodule foreach 'echo "pulling..." && git pull'
 
       - id: node-cache
         uses: actions/cache@v3
