--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -115,7 +115,10 @@ jobs:
       - name: Build provider and dependencies
         run: |
           cd workspaces
-          npm run build+deps provider
+          npm -w @prosopo/common run build
+          npm -w @prosopo/datasets run build
+          npm -w @prosopo/contract run build
+          npm -w @prosopo/provider run build
 
       - name: Setup the environment and run the unit tests
         run: |
