--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -116,10 +116,8 @@ jobs:
         run: |
           cd workspaces
           echo $(ls)
-          cd workspaces/packages/common && echo $(pwd) && npm run build
-          cd workspaces/packages/contract && echo $(pwd) && npm run build
-          cd workspaces/packages/datasets && echo $(pwd) && npm run build
-          cd workspaces/packages/provider && echo $(pwd) && npm run build
+          cd ./packages/common && echo $(pwd) && npm run build
+
 
       - name: Setup the environment and run the unit tests
         run: |
