--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -114,12 +114,12 @@ jobs:
 
       - name: Build provider and dependencies
         run: |
-          cd workspaces
-          cd packages/common && npm run build && echo $(pwd)
-          echo $(pwd) && echo$(ls $(pwd))
-          cd ../datasets && echo $(pwd) && npm run build
-          cd ../contract && echo $(pwd) && npm run build
-          cd ../datasets && echo $(pwd) && npm run build
+          cd workspaces && echo $(ls)
+          cd packages/common && echo $(ls) npm run build && echo $(pwd)
+          echo $(pwd) && echo $(ls $(pwd))
+          cd ../datasets && echo $(pwd) && echo $(ls) && npm run build
+          cd ../contract && echo $(pwd) && echo $(ls) && npm run build
+          cd ../datasets && echo $(pwd) && echo $(ls) && npm run build
 
       - name: Setup the environment and run the unit tests
         run: |
