--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -122,12 +122,10 @@ jobs:
           echo $(ls packages/datasets)
           echo $(ls packages/contract)
           echo $(ls packages/provider)
-          cd packages/common && echo $(ls) npm run build && echo $(pwd)
-          echo $(pwd)
-          echo $(ls $(pwd))
-          cd ../datasets && echo $(pwd) && echo $(ls) && npm run build
-          cd ../contract && echo $(pwd) && echo $(ls) && npm run build
-          cd ../datasets && echo $(pwd) && echo $(ls) && npm run build
+          cd packages/common && echo $(pwd) && echo $(ls) && echo $(pwd) && npm run build
+          cd ../datasets && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
+          cd ../contract && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
+          cd ../datasets && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
 
       - name: Setup the environment and run the unit tests
         run: |
