--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^3.3.6",
-    "@polkadot/api": "^9.11.3",
-    "@polkadot/api-contract": "^9.11.3",
+    "@polkadot/api": "9.13.6",
+    "@polkadot/api-contract": "9.13.6",
     "@polkadot/extension-base": "^0.44.1",
     "@polkadot/extension-dapp": "^0.44.1",
     "@polkadot/extension-inject": "^0.44.1",
-    "@polkadot/rpc-provider": "^9.11.3",
-    "@polkadot/types": "^9.11.3",
+    "@polkadot/rpc-provider": "9.13.6",
+    "@polkadot/types": "9.13.6",
     "@polkadot/util": "^10.2.6",
     "@polkadot/util-crypto": "^10.2.6",
     "@prosopo/api": "^0.1.11",
