provider: actually build provider

--- a/packages/provider/.github/workflows/tests.yml
+++ b/packages/provider/.github/workflows/tests.yml
@@ -126,7 +126,7 @@ jobs:
           cd packages/common && echo $(pwd) && echo $(ls) && echo $(pwd) && npm run build
           cd ../datasets && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
           cd ../contract && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
-          cd ../datasets && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
+          cd ../provider && echo $(pwd) && echo $(ls) && echo $(git show) && npm run build
 
       - name: Setup the environment and run the unit tests
         run: |
