--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -21,8 +21,8 @@
     "@polkadot/extension-inject": "^0.44.1",
     "@polkadot/rpc-provider": "9.13.6",
     "@polkadot/types": "9.13.6",
-    "@polkadot/util": "^10.2.6",
-    "@polkadot/util-crypto": "^10.2.6",
+    "@polkadot/util": "10.3.1",
+    "@polkadot/util-crypto": "10.3.1",
     "@prosopo/api": "^0.1.11",
     "@prosopo/contract": "^0.1.11",
     "@prosopo/datasets": "^0.1.11",
