--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -21,8 +21,8 @@
     "@polkadot/api": "9.13.6",
     "@polkadot/api-contract": "9.13.6",
     "@polkadot/rpc-provider": "9.13.6",
-    "@polkadot/util": "^10.2.1",
-    "@polkadot/util-crypto": "^10.2.1",
+    "@polkadot/util": "10.3.1",
+    "@polkadot/util-crypto": "10.3.1",
     "@prosopo/procaptcha-react": "^0.1.10",
     "axios": "^0.27.2",
     "browserify-fs": "^1.0.0",
