--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -26,12 +26,12 @@
   "dependencies": {
     "@polkadot/api": "9.13.6",
     "@polkadot/api-contract": "9.13.6",
-    "@polkadot/keyring": "^10.3.1",
+    "@polkadot/keyring": "10.3.1",
     "@polkadot/types": "9.13.6",
     "@polkadot/types-codec": "9.13.6",
     "@polkadot/types-create": "9.13.6",
-    "@polkadot/util": "^10.3.1",
-    "@polkadot/util-crypto": "^10.3.1",
+    "@polkadot/util": "10.3.1",
+    "@polkadot/util-crypto": "10.3.1",
     "@prosopo/common": "^0.1.11",
     "@prosopo/contract": "^0.1.11",
     "@prosopo/datasets": "^0.1.11",
